# metro-transit-etl-pipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py  settings.py
dags/: README.md  __init__.py  wmata_etl_dag.py
dashboard/: app.py  requirements.txt
docker/: Dockerfile.airflow  Dockerfile.dashboard  docker-compose.yml
docs/: 00_CODE_MAP.md  01_PROJECT_OVERVIEW.md  02_EXTRACT_LAYER.md  03_TRANSFORM_LAYER.md  04_QUALITY_CHECKS.md  05_LOAD_LAYER.md  06_ORCHESTRATION.md  07_CONFIGURATION.md  08_DOCKER_SETUP.md  09_DATA_QUALITY_FINDINGS.md  10_DATA_DICTIONARY.md  architecture.md
docs/interview_script/: README.md
scripts/: init-db.sql  schema.sql  seed-stations.sql
src/: __init__.py  main.py
src/clients/: __init__.py  wmata_client.py
src/core/: __init__.py  loader.py  quality_checks.py  transformer.py
src/models/: __init__.py  predictions.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  test_api_client.py  test_quality_checks.py  test_transformer.py
tests/integration/: __init__.py  test_pipeline_end_to_end.py
tests/unit/: __init__.py  test_quality_checks.py  test_transformer.py
